src-lib/v3/css/custom/texscript-core.css
.texscript-pages-container {
  display: inline-block;
  margin: 24px;
}

.texscript-pages {
  display: flex;
  gap: 24px;
  flex-wrap: wrap;
  align-items: flex-start;
  justify-content: flex-start;
}

.texscript-PageWrapper {
  display: flex;
  flex-direction: column;
  background-color: #fff;
  box-sizing: border-box;
  box-shadow: 4px 8px 16px rgba(0, 0, 0, 0.5);
  flex: 0 0 auto;
}

.texscript-Page {
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  overflow: hidden;
}

.texscript-Line {
  display: block;
}

.texscript-HR {
  height: 0;
  background: transparent;
  margin: 8px 0;
  border: 0;
  border-top: 1px solid #000;
}

.texscript-List {
  padding-left: 24px;
  margin-block-start: 0;
  margin-block-end: 0;
}

.texscript-Blocks {
  display: flex;
}

